--- a/Parser/makefile
+++ b/Parser/makefile
@@ -24,11 +24,11 @@ $(DST) : $(CPP_OBJ_FILES)
 
 clean :
 	rm -f $(DST)
-	rm -f $(CPP_OBJ_FILES)
-	rm -f $(CPP_DPT_FILES)
+	rm -f $(CPP_OBJ_FILES) $(CPP_DPT_FILES)
 	rm -f $(shell find . -name "*.dtmp")
 
 	# 测试文件
+	rm -f *.dys
 	rm -f *.dyd
 	rm -f *.varfil
 	rm -f *.profil
